--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<h1>My title</h1>
+<!DOCTYPE html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Apprendre le pull</title>
+</head>
+<h1>Site github</h1>
+<body>
+    
+</body>
+</html>
