--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apprendre le pull</title>
+    <title>participants au projet de e-commerce pour un site web</title>
 </head>
-<h1>Site github</h1>
+<h1>Listes des participants pour le site de e-commerce et les apports</h1>
+<ul>
+    <li>Fotsing fondjo pavel roy: l'etudiant fotsing a travailler sur le cahier de charge et a modeliser le site avec figma </li>
+<li>Cime francois: A commencer a coder le site cote frontend avec Html,css,javascript</li>
+ <li>Talla herve: A terminer le site cote backend et a faire la base de donnes en utilisant Mysql</li>
+</ul>
+
 <body>
     
 </body>
